Adicionei as informações necessárias nesse segundo commit

--- a/c.html
+++ b/c.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercício HTML</title>
 </head>
 <body>
-    
+    <h2>Nome: Artur Felipe <b>"The HTML God"</b> Triches</h2>
+    <h3>Idade: 17 Anos | Wannabe dev</h3>
+    <div style="display: flex;align-items: flex-start;">
+    <img src="/img/veia.jpg" title="Foto do meu currículo que teve que ser stock." alt="Não tinha nenhuma foto minha disponível, encontrei essa stock imagem similar.">
+    <p>Meu nome é <b>Artur Felipe Triches</b>, nasci em 2008
+    e estou tentando desenvolver uma página em HTML SEM usar CSS. Estou tentando aprender C++ e HTML por enquanto, e planejo me tornar dev
+    em algum dos dois no futuro. Como hobbies, me atenho muito a programação livre e jogos de gerenciamento de processos, como Factorio. Abaixo segue o link do meu GitHub, que por enquanto só tem repositórios de teste/treino.
+    <a href="https://github.com/cbstrick" target="_blank" style="display: flex; align-self:self-end; justify-self:center; margin-top: 5%;">
+        Github
+    </a>
+    <a href="https://www.roblox.com/users/323207958/profile" target="_blank" style="display: flex; align-self:self-end; justify-self:center;">Roblox
+    </a></p>
+    </div>
+    <b style="display: flex; justify-content: center;">Bandas FAVORITAS</b>
+    <ul>
+        <li style="display: flex; justify-self: center;">Bad Omens</li>
+        <li style="display: flex; justify-self: center;">Metallica</li>
+        <li style="display: flex; justify-self: center;">Chevelle</li>
+    </ul>
+    <table style="display: flex;justify-content: center;">
+        <tr>
+            <th>Linguagem</th>
+            <th> | </th>
+            <th>Sei fazer algo</th>
+        </tr>
+        <tr>
+            <td>C++</td>
+            <td> | </td>
+            <td>Sei +-</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td> | </td>
+            <td>Sei bastante</td>
+        </tr>
+        <tr>
+            <td>HTML/CSS</td>
+            <td> | </td>
+            <td>Sei +-</td>
+        </tr>
+    </table>
 </body>
 </html>
