Adicionado os coiso certo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecionamento</title>
+    <title>Redirect</title>
 </head>
-<body style="height: 100vh;">
-    <a href="http://127.0.0.1:5500/goto.html" target="_blank" style="display: flex;justify-self: center; align-self: center;">
-        Pagina nada suspeita nao clikar aqui plis senao toma scam muito dinheiro envolvido propina desvio de verba (troll)
-    </a>
+
+<body>
+    <img src="/img/uffsloo.png" alt="logo da uffs">
+    <img src="https://cc.uffs.edu.br/images/logo/CC-logo-com-background.svg" alt="logo do curso de cc">
+    <a href="Lista.html" target="_blank">Lista</a>
+    <a href="Tabela.html" target="_blank">Tabela</a>
+    <a href="Texto.html" target="_blank">Texto</a>
+    <a href="https://cc.uffs.edu.br" target="_blank">site CC</a>
 </body>
+
 </html>
